Fix adjustment background color for rows in dark mode.

--- a/frontend/src/app/modules/mips/components/list/list.component.scss
+++ b/frontend/src/app/modules/mips/components/list/list.component.scss
@@ -1020,3 +1020,14 @@ tr.maker-element-row,tr.mat-header-row {
 tr.mat-row.maker-element-row:hover {
   background-color: #F5F6FA;
 }
+
+
+.maker-container.maker-container-dark {
+  tr.maker-element-row {
+    background-color: #1a202b;
+  }
+
+  tr.mat-header-row {
+    background-color: #31394D;
+  }
+}
